Bug 438636 - Text tool doesn't work
Summary: Text tool doesn't work
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tool/Text (other bugs)
Version First Reported In: unspecified
Platform: Android Android 11.x
: NOR normal
Target Milestone: ---
Assignee: sh_zam
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-06-14 17:41 UTC by pantelos2585
Modified: 2021-09-30 12:54 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description pantelos2585 2021-06-14 17:41:04 UTC
SUMMARY


STEPS TO REPRODUCE
1. Pressing the text tool
2. Dragging or double taping on the canvas 
3. No result

OBSERVED RESULT
None for the text tool. If instead of one click or drag and drop, you keep pressing on the canvas area while the text tool is selected, the colors and the brushes tool appear 

EXPECTED RESULT
Creating a text object

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 sh_zam 2021-09-23 12:27:25 UTC
Git commit 652f001e8a704971fa0435165858c3896040e6f5 by Sharaf Zaman.
Committed on 23/09/2021 at 12:22.
Pushed by szaman into branch 'master'.

Bugfix: Propagate TouchBegin event

We used to ignore the TouchBegin event which would in some cases not
activate the tool.

M  +3    -1    libs/ui/input/kis_input_manager.cpp
M  +1    -0    libs/ui/input/kis_input_manager_p.h

https://invent.kde.org/graphics/krita/commit/652f001e8a704971fa0435165858c3896040e6f5
Comment 2 sh_zam 2021-09-30 12:54:29 UTC
Git commit 5f09f93640786a1a7f8f3b39000a319e1732fb91 by Sharaf Zaman.
Committed on 30/09/2021 at 12:53.
Pushed by szaman into branch 'krita/5.0'.

Bugfix: Propagate TouchBegin event

We used to ignore the TouchBegin event which would in some cases not
activate the tool.
(cherry picked from commit 652f001e8a704971fa0435165858c3896040e6f5)

M  +3    -1    libs/ui/input/kis_input_manager.cpp
M  +1    -0    libs/ui/input/kis_input_manager_p.h

https://invent.kde.org/graphics/krita/commit/5f09f93640786a1a7f8f3b39000a319e1732fb91