Bugfix: Propagate TouchBegin event

We used to ignore the TouchBegin event which would in some cases not
activate the tool.

BUG:438636
(cherry picked from commit 652f001e8a704971fa0435165858c3896040e6f5)